Ported testing code to Java 11